# AODv3

./: .env.example  .gitignore  .replit  AOD_Overview_Code_and_Palette.md  CLAUDE.md  CODE_REVIEW_JAN_2026.md  CODE_REVIEW_KEY_NORMALIZATION.md  CODE_REVIEW_TECH_DEBT.md  CTO_ONBOARDING.md  DISCOVERY_LOGIC.md  FIX_KEY_NORMALIZATION_MISMATCH.md  KEY_NORMALIZATION_ANALYSIS.md  Makefile  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_TEST_RESULTS.md  RACI_MATRIX.md  README.md  README_NUKE_CHECK.md  REFACTORING_ASSESSMENT.md  ROOT_CAUSE_CORRECTED.md  TECH_DEBT_REVIEW.md  TRIAGE_FIX.md  VERIFICATION_COMPLETE.md  aam-aod-boundary.md  aod.md  aod_deferred_work.md  aod_website_breakdown.md  check_assets.py  check_key_mismatch.py  check_reconcile_keys.py  debug_admission.py  debug_admission_call.py  debug_admission_detail.py  debug_cataloged_fn.py  debug_discovery.py  debug_policy_engine.py  debug_production_googleapis_office.py  debug_teamsuite.py  debug_vendor_governance.py  debug_vendor_matching.py  (+27 more)
artifacts/: baseline_run_8ccaadc8fde3.md
attached_assets/: AeroWave-4G5X_assessment_run_6e8a91aa5620_1768666846151.md  CyberWorks-UJRK_assessment_run_447dc1e3667e_1768751510885.md  FARM_AOD_INTEGRATION_(2)_1765501097578.md  HelixSystems-K5PD_assessment_run_3653b0d9d7c2_1768752208774.md  InfoWorks-ZQF9_assessment_run_70bb28dd112e_1768755390011.md  KEY_NORMALIZATION_MISMATCH_STATE.md  KPI_Dashboard_Package_1765546338021.md  LATE_BINDING_IMPLEMENTATION_PLAN_1767609620000.md  Pasted--AOD-Triage-Governance-Overhaul-Mission-Convert-the-Tri_1766795496925.txt  (+199 more)
client/: .gitignore  index.html  (+4 more)
(+409 files in other folders)
