[project]
name = "aod"
version = "1.0.0"
description = "AutonomOS Discover - Enterprise Asset Discovery Module"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.124.4",
    "google-genai>=1.56.0",
    "httpx>=0.28.1",
    "openai>=2.13.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
